# fake_detector

./: .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  Makefile  README.en.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
detect_ai/: README.en.md  README.md  __init__.py
detect_ai/generating/: GeneratedImageDetector.py  main.py
detect_ai/modifying/: classifier.py  detection.py  ensemble.py
detect_ai/preprocessing/: face_feature_extractor_main.py  feature_extraction.py  features_output.csv  generating_features.py  hair_structure.py  img_features.py  perspective_depth.py  swap_features.py
detect_ai/reporting/: report_generator.py
detect_ai/swapping/: logger_setup.py  predictor.py
docs/source/: conf.py  index.rst
docs/source/api/: generating.rst  modifying.rst  preprocessing.rst  reporting.rst  swapping.rst
generating/: GeneratedImageDetector.py  example.ipynb  requirements.txt
generating/tests/: test_generated_image_detector.py
interface/: README.md  README.ru.md  demo.py  gui.py  main.py
modifying/: classifier.py  detection.py
preprocessing/: eye_reflections.py  face_feature_extractor_main.py  feature_extraction.py  feature_extraction_examples.ipynb  featuresExtractor.py  features_output.csv  img_features.py  perceptual_analysis.py  swap_features.py
reporting/: report_generator.py
swapping/: exceptions.py  feature_calculator.py  main.py  predictor.py  requirements.txt  tutorial.ipynb  tutorial_en.ipynb
swapping/models/feature_based/: catboost_lbp.cbm  catboost_tf_sf.cbm  meta_model_ensemble.pkl
swapping/preprocessing/: color_texture.py  eye_reflections.py  face_feature_extractor_main.py  feature_extraction_examples.ipynb  featuresExtractor.py  frequency_artifacts.py  geometry.py  hair_structure.py  img_features.py  perceptual_analysis.py  perspective_depth.py
tests/: README.en.md  README.md  generating.py  modifying.py  modifying_unittests.py  swapping.py  swapping_performance.py  test_face_swap_integration.py  test_performance.py
tutorials/: README.en.md  README.md  generating.ipynb  modifying.en.ipynb  modifying.ipynb  swapping.ipynb
