[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "detect_ai"
version = "2025.0.21"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

requires-python = ">=3.11.0,<3.11.1"
authors = [
  {name = "Dmitry Levshun"},
  {name = "Andrey Chechulin"},
  {name = "Dmitry Vesnin"},
  {name = "Diana Levshun"},
  {name = "Alexey Kashevnik"},
  {name = "Mikhail Haleev"},
]
maintainers = [
  {name = "Dmitry Levshun", email = "dmitry.levshun@gmail.com"}
]
description = "AI library for face images faking detection"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["ai", "deepfake"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.11"
]

[project.urls]
Documentation = "https://fake-detector.readthedocs.io/"
Repository = "https://github.com/levshun/fake_detector.git"
"Bug Tracker" = "https://github.com/levshun/fake_detector/issues"
